Project optimization: Remove unnecessary files and organize structure
- Removed __pycache__ directories and compiled bytecode
- Removed venv/ directory (3.5GB+ saved)
- Removed docker_images_tar/ directory (3.6GB+ saved)
- Removed runtime log files (app.log, logs/*)
- Moved test files to tests/ directory for better organization
- Enhanced .gitignore to prevent future accumulation of unnecessary files
- Maintained all core functionality and project architecture

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ gradio.log
 # Docker
 .dockerignore
 docker-compose.override.yml
+docker_images_tar/
+*.tar.gz
 
 # Data directories (runtime data)
 data/
@@ -123,7 +125,6 @@ dmypy.json
 *.pyd
 
 # Package files
-*.tar.gz
 *.zip
 *.rar
 
@@ -150,4 +151,8 @@ Desktop.ini
 
 # Monitoring and profiling
 *.prof
-*.trace 
+*.trace
+
+# Test files (keep in tests/ directory)
+test_*.md
+test_*.sh 
