Remove .env from tracking and update project configuration

--- a/config.env
+++ b/config.env
@@ -1,31 +1,47 @@
-# vLLM Configuration
-VLLM_API_KEY=EMPTY
-VLLM_CHAT_ENDPOINT=http://localhost:11444/v1
-CHAT_MODEL_PORT=11444
-CHAT_MODEL=google/gemma-3-12b-it
+# Ports
+EMBEDDING_PORT=
+CHAT_MODEL_PORT=
 
-# Database Configuration
-DATABASE_URL=postgresql://chatbot_user:chatbot_password@localhost:5432/chatbot_db
+# vLLM API Configuration
+# vLLM Configuration
+VLLM_API_KEY=
+CHAT_MODEL=
+# VLLM_EMBEDDING_ENDPOINT=  # Commented out to use local embeddings
+VLLM_CHAT_ENDPOINT=
 
 # Qdrant Configuration
-QDRANT_PATH=./qdrant_storage
-QDRANT_COLLECTION_NAME=rag_documents
-QDRANT_VECTOR_SIZE=0
-QDRANT_DISTANCE=COSINE
-QDRANT_FORCE_RECREATE=true
-QDRANT_ON_DISK=false
+# For local file storage (no Docker required):
+# QDRANT_PATH=./qdrant_storage
+QDRANT_COLLECTION_NAME=
+
+# For Docker/remote Qdrant (uncomment to use):
+QDRANT_URL=
+# QDRANT_API_KEY=
+
+# Qdrant Vector Configuration
+# Vector dimension - will be auto-detected from embedding model if not set
+# Common dimensions: 384 (sentence-transformers/all-MiniLM-L6-v2), 768 (BERT-base), 1024 (multilingual-e5-large-instruct)
+QDRANT_VECTOR_SIZE=
+# Distance metric: COSINE, EUCLID, DOT
+QDRANT_DISTANCE=
+# Force recreate collection if dimension mismatch (true/false)
+QDRANT_FORCE_RECREATE=
+# Vector storage on disk (true/false) - saves RAM but slower access
+QDRANT_ON_DISK=
 
 # Document Configuration
-DOCUMENTS_PATH=./documents
+DOCUMENT_URL=
+DOCUMENTS_PATH=
 
-# Embedding Configuration
-EMBEDDING_MODEL=intfloat/multilingual-e5-large-instruct
+# Model Configuration
+EMBEDDING_MODEL=
+CHAT_MODEL=
 
-# RAG Parameters - Improved for better accuracy
-TOP_K=5
-CHUNK_SIZE=800
-CHUNK_OVERLAP=150
+# Retrieval Configuration
+TOP_K=3
+CHUNK_SIZE=
+CHUNK_OVERLAP=
 
-# Server Configuration
-HOST=0.0.0.0
-PORT=8081 
+# FastAPI Configuration
+HOST=
+PORT= 
